<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cinema</string>
    <string name="app_name_uppercase">CINEMA</string>
    <string name="img_desc">img desc</string>
    <string name="genre_title">Genre</string>
    <string name="release_title">Release</string>
    <string name="movie_genre">Movie Genre</string>
    <string name="movie_release_date">Movie Release Date</string>
    <string name="status">Status</string>
    <string name="movie_status">Movie Status</string>
    <string name="overview_title">Overview</string>
    <string name="movie_overview">A dummy movie overview</string>
    <string name="homepage_title">Homepage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_is_empty">Data is empty!</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="something_wrong">Oops… something went wrong</string>
    <string name="popularity_title">Popularity</string>
    <string name="movie_popularity">Movie Popularity</string>
    <string name="share">Share</string>
    <string name="age_rating_title">Age Rating</string>
    <string name="movie_age_rating">Movie Age Rating</string>
    <string name="favorite">Favorite</string>
    <string name="title_favorite">Favorite</string>
    <string name="share_movie">I’m inviting you to watch %1$s.</string>
    <string name="title_similar">Similar Movies</string>
    <string name="title_review">Reviews</string>
    <string name="title_now_showing">Now Showing</string>
    <string name="title_popular">Popular Movie</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_empty_favorite">You don\'t have any favorite movies yet</string>
    <string name="rating_format">Rating : %1$.1f</string>
    <string name="home_headline">Discover your next favorite movie</string>
    <string name="featured_label">NOW PLAYING</string>
    <string name="view_details">View details</string>
    <string name="hero_metadata">★ %1$.1f  •  %2$s</string>
    <string name="rating_short_format">★ %1$.1f</string>
    <string name="retry">Try again</string>
    <string name="section_error">We couldn’t load this collection.</string>
    <string name="section_empty">No movies are available right now.</string>
    <string name="movie_poster_content_description">Poster for %1$s</string>
    <string name="movie_backdrop_content_description">Backdrop for %1$s</string>
    <string name="release_unknown">Release date unavailable</string>
    <string name="back">Back</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="votes_format">%1$s votes</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="read_full_review">Read full review</string>
    <string name="review_rating_format">★ %1$.1f</string>
    <string name="review_not_rated">Not rated</string>
    <string name="similar_movies_empty">No similar movies were found.</string>
    <string name="reviews_empty">No reviews have been posted yet.</string>
    <string name="similar_movies_error">We couldn’t load similar movies.</string>
    <string name="reviews_error">We couldn’t load reviews.</string>
    <string name="movie_unavailable">This movie’s details are unavailable.</string>
    <string name="go_back">Go back</string>
    <string name="overview_unavailable">No overview is available for this movie.</string>
    <string name="unknown_author">Anonymous</string>
    <string name="movie_image">Movie image</string>
    <string name="my_favorites">My Favorites</string>
    <string name="no_favorites_title">No favorites yet</string>
    <string name="no_favorites_message">Save movies you love and find them here.</string>
    <string name="browse_movies">Browse movies</string>
    <string name="sort_favorites">Sort favorites</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_title">Title</string>
    <string name="sort_rating">Rating</string>
    <string name="sort_release_year">Release year</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="undo">Undo</string>

    <plurals name="favorite_count">
        <item quantity="one">%d saved movie</item>
        <item quantity="other">%d saved movies</item>
    </plurals>

    <string-array name="favorite_sort_options">
        <item>@string/sort_title</item>
        <item>@string/sort_rating</item>
        <item>@string/sort_release_year</item>
    </string-array>
</resources>
